[package]
name = "stock_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
colored = "2.0"
plotters = "0.3"
crossterm = "0.25" 
textplots = "0.8.7"